fix: /sse/timeout
removed delay param from /sse/test
